# PyGuard-CLI

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
pyguard/: __init__.py  cli.py  models.py  scanner.py  utils.py
pyguard/formatters/: __init__.py  base.py  html_fmt.py  json_fmt.py  markdown_fmt.py
pyguard/rules/: __init__.py  best_practices.py  complexity.py  performance.py  security.py  style_checker.py  type_checker.py
pyguard/tui/: __init__.py  dashboard.py
tests/: __init__.py  test_rules.py  test_scanner.py
tests/fixtures/: bad_code.py  good_code.py
