[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "pyguard-cli"
version = "1.0.0"
description = "轻量级Python代码质量智能巡检引擎"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "PyGuard Team"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]

[project.scripts]
pyguard = "pyguard.cli:main"

[tool.setuptools]
packages = ["pyguard", "pyguard.rules", "pyguard.formatters", "pyguard.tui"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
